// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title component should render Title with props 1`] = `
<h1
  className="title"
>
  Test title #1
</h1>
`;

exports[`Title component should render Title with props 2`] = `
<h1
  className="title"
>
  Simple title
</h1>
`;
